--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PointSport</title>
+    <link rel="shortcu-icon" href="favicon.ico" type="ico">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -43,38 +44,38 @@
 <h1 id="Sobre"><center>Sobre nós</center></h1>
 <p><center>Somos um grupo de quatro integrantes jovens que estão estudando desenvolvimento de sistemas no senai zerbini</center></p>
 <hr>
-   <footer><center><div class="footer-section">
-        <p>Somos uma empresa dedicada ao esporte</p>
+<footer><center><div class="footer-section">
+    <p>Somos uma empresa dedicada ao esporte</p>
 </div>
-   <div class="footer-section">
-        <h4>Links Rápidos</h4>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#Sobre">Sobre</a></li>
-            <li><a href="#serviços">Serviços</a></li>
-            <li><a href="#Contato">Contato</a></li>
-        </ul>
-    </div>
-    <div class="footer-section">
-        <h4 id="contato">Contato</h4>
-        <p>Theus@Esportnet.com</p>
-        <p>Telefone: (11) 19 4321 8765</p>
-        <p>Endereço: Rua Parque serra, 32, São Paulo-SP</p>
-    </div>
-    <div class="footer-section">
-        <h4>Siga-nos</h4>
-        <div class="social-links">
-            <a href="https://www.youtube.com/" target="_blank">Youtube</a>
-            <a href="https://www.nike.com/" target="_blank">Nike</a>
-            <a href="https://www.adidas.com.br/" target="_blank">Adidas</a>
-        </div>
+<div class="footer-section">
+    <h4>Links Rápidos</h4>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#Sobre">Sobre</a></li>
+        <li><a href="#serviços">Serviços</a></li>
+        <li><a href="#Contato">Contato</a></li>
+    </ul>
+</div>
+<div class="footer-section">
+    <h4 id="contato">Contato</h4>
+    <p>point.sport@esportestn.com</p>
+    <p>Telefone: (11) 19 4321 8765</p>
+    <p>Endereço: Rua Parque serra, 32, São Paulo-SP</p>
+</div>
+<div class="footer-section">
+    <h4>Siga-nos</h4>
+    <div class="social-links">
+        <a href="https://www.youtube.com/" target="_blank">Youtube</a>
+        <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+        <a href="https://www.instagram.com/" target="_blank">Instagram</a>
     </div>
 </div>
-    <div class="footer-bottom">
-        <p>&copy; 2024 Empresa. Todos direitos reservados</p>
-    </div>
+</div>
+<div class="footer-bottom">
+    <p>&copy; 2024 Empresa. Todos direitos reservados</p>
+</div>
 </center>
 </footer>
-    <p class="eu">Desenvolvido por: Matheus Wagner Rondeli Ferreira - 13/08/2024</p>
+<p class="eu">Desenvolvido pela equipe: 2 olhos e 1 boca</p>
 </body>
 </html>
