--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--Nomes:Matheus Wagner, Nicolas henrique, João ricardo e Thiffany Queiroz-->
     <nav id="home">
         <ul>
             <li><a href="#home">Home</a></li>
